# slurm

./: NEWS  configure  configure.ac  slurm.spec
contribs/torque/: mpiexec.pl  qsub.pl
src/common/: fd.c  fd.h  fetch_config.c  gres.c  slurm_protocol_api.c  slurm_resolv.c
src/plugins/cli_filter/: Makefile.am
src/plugins/cli_filter/gres_env/: Makefile.am  Makefile.in  cli_filter_gres_env.c  spank_gres_env.c
src/plugins/cli_filter/osc_env/: Makefile.am  Makefile.in  cli_filter_osc_env.c
src/plugins/job_submit/: Makefile.am
src/plugins/job_submit/gres_env/: Makefile.am  Makefile.in  job_submit_gres_env.c
src/plugins/job_submit/lua/: job_submit_lua.c
src/plugins/job_submit/pbs/: spank_pbs.c
src/plugins/job_submit/save_script/: Makefile.am  Makefile.in  job_submit_save_script.c
src/sbatch/: opt.c  sbatch.c  xlate.c
src/slurmctld/: job_mgr.c  job_scheduler.c  node_mgr.c  node_scheduler.c  reservation.c
